--- a/LearningGroups/Crawler/01_First_Experience.ipynb
+++ b/LearningGroups/Crawler/01_First_Experience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,14 +10,12 @@
      "output_type": "stream",
      "text": [
       "请输入城市，回车退出: \n",
-      "xx\n",
-      "未获得\n",
-      "请输入城市，回车退出: \n",
       "北京\n",
-      "2日星期四 \n",
-      " 高温 27℃ \n",
+      "{'data': {'yesterday': {'date': '4日星期六', 'high': '高温 29℃', 'fx': '西南风', 'low': '低温 21℃', 'fl': '<![CDATA[2级]]>', 'type': '多云'}, 'city': '北京', 'forecast': [{'date': '5日星期天', 'high': '高温 30℃', 'fengli': '<![CDATA[2级]]>', 'low': '低温 23℃', 'fengxiang': '北风', 'type': '雷阵雨'}, {'date': '6日星期一', 'high': '高温 31℃', 'fengli': '<![CDATA[2级]]>', 'low': '低温 21℃', 'fengxiang': '北风', 'type': '多云'}, {'date': '7日星期二', 'high': '高温 32℃', 'fengli': '<![CDATA[2级]]>', 'low': '低温 21℃', 'fengxiang': '东风', 'type': '多云'}, {'date': '8日星期三', 'high': '高温 31℃', 'fengli': '<![CDATA[3级]]>', 'low': '低温 23℃', 'fengxiang': '南风', 'type': '雷阵雨'}, {'date': '9日星期四', 'high': '高温 28℃', 'fengli': '<![CDATA[1级]]>', 'low': '低温 22℃', 'fengxiang': '东南风', 'type': '雷阵雨'}], 'ganmao': '感冒低发期，天气舒适，请注意多吃蔬菜水果，多喝水哦。', 'wendu': '29'}, 'status': 1000, 'desc': 'OK'}\n",
+      "5日星期天 \n",
+      " 高温 30℃ \n",
       " 低温 23℃ \n",
-      " 大雨\n",
+      " 雷阵雨\n",
       "请输入城市，回车退出: \n",
       "\n"
      ]
